kubernetes/apps/kubevirt/cdi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdi-uploadproxy
  namespace: cdi
spec:
  ingressClassName: internal-nginx
  rules:
    - host: &host "cdi.jahanson.tech"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdi-uploadproxy
                port:
                  number: 443
  tls:
    - hosts:
        - *host
